"""Atualiza tabelas de equipamento e registro

Revision ID: 6636a2ffef7a
Revises: 
Create Date: 2025-10-10 20:23:06.405681

"""
from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import mysql

# revision identifiers, used by Alembic.
revision = '6636a2ffef7a'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('equipamentos', schema=None) as batch_op:
        batch_op.add_column(sa.Column('patrimonio', sa.String(length=255), nullable=False))
        batch_op.add_column(sa.Column('tipo', sa.String(length=100), nullable=False))
        batch_op.add_column(sa.Column('marca', sa.String(length=100), nullable=False))
        batch_op.add_column(sa.Column('modelo', sa.String(length=100), nullable=False))
        batch_op.add_column(sa.Column('numero_serie', sa.String(length=255), nullable=False))
        batch_op.add_column(sa.Column('data_aquisicao', sa.Date(), nullable=False))
        batch_op.add_column(sa.Column('localizacao', sa.String(length=255), nullable=False))
        batch_op.add_column(sa.Column('status', sa.String(length=50), nullable=False))
        batch_op.add_column(sa.Column('observacoes', sa.Text(), nullable=True))
        batch_op.add_column(sa.Column('data_cadastro', sa.DateTime(timezone=True), nullable=True))
        batch_op.add_column(sa.Column('data_ultima_alteracao', sa.DateTime(timezone=True), nullable=True))
        batch_op.create_unique_constraint(None, ['patrimonio'])
        batch_op.create_unique_constraint(None, ['numero_serie'])
        batch_op.drop_column('nome')

    with op.batch_alter_table('registros_suporte', schema=None) as batch_op:
        batch_op.add_column(sa.Column('id_equipamento', sa.Integer(), nullable=False))
        batch_op.add_column(sa.Column('data_suporte', sa.DateTime(timezone=True), nullable=True))
        batch_op.add_column(sa.Column('tipo_suporte', sa.String(length=100), nullable=False))
        batch_op.add_column(sa.Column('responsavel', sa.String(length=255), nullable=False))
        batch_op.add_column(sa.Column('custo', sa.Numeric(precision=10, scale=2), nullable=True))
        batch_op.create_foreign_key(None, 'equipamentos', ['id_equipamento'], ['id'])

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('registros_suporte', schema=None) as batch_op:
        batch_op.drop_constraint(None, type_='foreignkey')
        batch_op.drop_column('custo')
        batch_op.drop_column('responsavel')
        batch_op.drop_column('tipo_suporte')
        batch_op.drop_column('data_suporte')
        batch_op.drop_column('id_equipamento')

    with op.batch_alter_table('equipamentos', schema=None) as batch_op:
        batch_op.add_column(sa.Column('nome', mysql.VARCHAR(length=150), nullable=True))
        batch_op.drop_constraint(None, type_='unique')
        batch_op.drop_constraint(None, type_='unique')
        batch_op.drop_column('data_ultima_alteracao')
        batch_op.drop_column('data_cadastro')
        batch_op.drop_column('observacoes')
        batch_op.drop_column('status')
        batch_op.drop_column('localizacao')
        batch_op.drop_column('data_aquisicao')
        batch_op.drop_column('numero_serie')
        batch_op.drop_column('modelo')
        batch_op.drop_column('marca')
        batch_op.drop_column('tipo')
        batch_op.drop_column('patrimonio')

    # ### end Alembic commands ###
